@@ -1,7 +1,14 @@
 package org.scribe.builder.api;
 
+import org.scribe.model.Verb;
+
 public class EvernoteApi extends DefaultApi10a
 {
+  @Override
+  protected Verb getRequestTokenVerb()
+  {
+    return Verb.GET;
+  }
 
 	@Override
 	public String getRequestTokenEndpoint()
@@ -10,9 +17,14 @@ public class EvernoteApi extends DefaultApi10a
 	}
 
 	@Override
-	public String getAccessTokenEndpoint()
-  {
-		return "https://www.evernote.com/oauth";
+	protected Verb getAccessTokenVerb()
+	{
+	  return Verb.GET;
 	}
 
+	@Override
+	public String getAccessTokenEndpoint()
+	{
+		return "https://www.evernote.com/oauth";
+	}
 }
